--- a/css/style.css
+++ b/css/style.css
@@ -3,19 +3,19 @@
   padding: 0;
   box-sizing: border-box;
   color: #5e5e5e;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: 'Press Start 2P', cursive;
 }
 
 .water {
-  color: #b5dcf8;
+  color: #22e1eb;
 }
 
 .ice {
-  color: #dadaff;
+  color: #a0e9e5;
 }
 
 .fire {
-  color: #ffa3a3;
+  color: #fe925e;
 }
 
 header {
@@ -24,13 +24,13 @@ header {
 
 header h1 {
   padding-block: 50px;
-  font-size: 60px;
+  font-size: 50px;
 }
 
 header p {
   padding-bottom: 20px;
   font-weight: bolder;
-  font-size: 30px;
+  font-size: 20px;
 }
 
 main {
@@ -42,13 +42,13 @@ main {
   display: flex;
   list-style: none;
   width: 65%;
-  justify-content: space-between;
-  border: 3px solid #5e5e5e;
+  justify-content: space-around;
+  border: 7px solid #5e5e5e;
   align-items: center;
   margin: 20px auto;
-  padding: 80px;
-  gap: 60px;
-  height: 125px;
+  padding: 20px;
+  gap: 30px;
+  height: 200px;
 }
 
 hr {
@@ -62,19 +62,22 @@ hr {
   gap: 30px;
   width: 65%;
   margin: 0 auto;
-  border: 3px solid #5e5e5e;
+  border: 7px solid #5e5e5e;
   padding: 20px;
+  height: 200px;
 }
 
 .enemy {
   border-right: 3px solid #5e5e5e;
+  width: 40%;
   padding-right: 30px;
   padding-left: 20px;
-  font-size: 20px;
+  font-size: 13px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: 100%;
 }
 
 .enemy h3 {
@@ -85,5 +88,31 @@ hr {
   display: flex;
   flex-direction: column;
   gap: 12px;
+  font-size: 10px;
+  width: 60%;
+}
+
+.btn {
+  color: white;
+  background-color: #ffa3a3;
+  padding: 20px 60px;
+  border-radius: 5px;
+  border: 3px solid #dadaff;
   font-size: 20px;
+  margin: 0 auto;
+}
+
+.btn:hover {
+  background-color: #f77676;
+}
+
+footer {
+  font-size: 20px;
+  width: 100%;
+  margin-top: 30px;
+  padding: 15px;
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  border: 7px solid #5e5e5e;
 }
