--- a/css/style.css
+++ b/css/style.css
@@ -115,5 +115,5 @@ footer {
   bottom: 0;
   text-align: center;
   border: 7px solid #5e5e5e;
-  background-color: white;
+  background-color: #fff;
 }
